--- a/assets/style/_colors.scss
+++ b/assets/style/_colors.scss
@@ -2,6 +2,7 @@ $primary: #D87D4A;
 $secondary: #FBAF85;
 $p-black: #101010;
 $p-grey: #F1F1F1;
+$p-dark-grey: #7F7F7F;
 $p-off-white: #FAFAFA;
 $black: #000000;
 $white: #FFFFFF;
