--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -13,7 +13,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow-x: hidden;
     font-size: 62.5%;
     font-family: "MANROPE";
 }
